--- a/progfun1-example/.settings/org.scala-ide.sdt.core.prefs
+++ b/progfun1-example/.settings/org.scala-ide.sdt.core.prefs
@@ -32,7 +32,7 @@ optimise=false
 recompileOnMacroDef=true
 relationsDebug=false
 scala.compiler.additionalParams=
-scala.compiler.installation=-1123989063
+scala.compiler.installation=2.11
 scala.compiler.sourceLevel=2.11
 scala.compiler.useProjectSettings=true
 stopBuildOnError=true
